syntax = "proto3";

package proto;
option go_package = "./;proto";

import "AttackResult.proto";

message EvtHittingOtherInfo {
  uint32 peer_id = 1;
  AttackResult attack_result = 2;
}
