syntax = "proto3";

package proto;
option go_package = "./;proto";

import "OnlinePlayerInfo.proto";

message PlayerApplyEnterMpNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1818;
  }

  OnlinePlayerInfo src_player_info = 11;
  uint32 src_app_id = 6;
  uint32 src_thread_index = 13;
}
