syntax = "proto3";

package proto;
option go_package = "./;proto";


message PlayerApplyEnterMpRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    CMD_ID = 1843;
  }

  int32 retcode = 5;
  uint32 target_uid = 4;
  uint32 param = 9;
}
