syntax = "proto3";

package proto;
option go_package = "./;proto";


message SceneKickPlayerNotify {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 292;
  }

  uint32 kicker_uid = 9;
  uint32 target_uid = 13;
}
