syntax = "proto3";

package proto;
option go_package = "./;proto";

// CmdId: 4001
// EnetChannelId: 0
// EnetIsReliable: true
message UnlockNameCardNotify {
  uint32 name_card_id = 14;
}
